# jotmd

./: .gitignore  LICENSE  README.md  config.example.toml  jotmd.py  pyproject.toml
